@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.30
+    - added animate
 
 0.29
     - new param for checkerboard: extra
